--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <title>iovid</title>
     </head>
     
-    <body style="background-color: blue">
- 
+    <body background="https://github.com/Flippity/Flippity.github.io/blob/master/background.png?raw=true">
+		
     </body>
+	
+	<script>
+	
+	</script>
     
     <style>
 
