--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>iovid</title>
     </head>
 		
-    <body class="body">
+    <body>
 		<h1 id= "heading" class="heading" align=center>io Vid</h1>
 		
 	    <script>
